<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--APP NAME-->
    <string name="app_name">Bakealicious</string>


    <!--PLACEHOLDER STRINGS-->
    <string name="recipe_name_placeholder">Apple Tart</string>


    <!--RECIPE STRINGS-->
    <string name="num_steps">Steps: <xliff:g name="steps_count" example="7">%s</xliff:g></string>
    <string name="num_ingredients">Ingredients: <xliff:g name="ingredients_count" example="10">%s</xliff:g></string>
    <string name="num_servings">Servings: <xliff:g name="servings_count" example="6">%s</xliff:g></string>
    <string name="view_recipe">VIEW RECIPE</string>

    <!--INGREDIENT ITEM STRINGS-->
    <string name="ingredient_details">
        <xliff:g name="quanitity" example="6">%s</xliff:g>
        <xliff:g name="measure" example="Cups">%s</xliff:g>
        <xliff:g name="ingredient" example="Honey">%s</xliff:g>
    </string>

    <!--STEP ITEM STRINGS-->
    <string name="step_short_desc">
        Step <xliff:g name="steps_num" example="4">%s</xliff:g>
        : <xliff:g name="short_desc" example="Press the crust into baking form.">%s</xliff:g>
    </string>

    <!--INGREDIENTS LAYOUT STRINGS-->
    <string name="ingredients_title"><xliff:g name="ingredients_count" example="10">%s</xliff:g> Ingredients</string>

    <!--STEPS LAYOUT STRINGS-->
    <string name="steps_title"><xliff:g name="steps_count" example="7">%s</xliff:g> Steps</string>


    <!--CONTENT DESCRIPTION STRINGS-->
    <string name="recipe_image_description">Image of the recipe.</string>
    <string name="view_step_button_description">Press button to view more information on this step.</string>
    <string name="play_button_description">Press to play video.</string>
    <string name="pause_button_description">Press to pause video.</string>
    <string name="expand_fullscreen_button_description">Press to show fullscreen mode.</string>
    <string name="shrink_fullscreen_button_description">Press to shrink back to normal size.</string>


    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_steps">StepsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_stepsitem_list">StepsItems</string>
    <string name="title_stepsitem_detail">StepsItem Detail</string>
</resources>
