<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/recipe_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation"
    app:contentPadding="@dimen/card_padding"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/recipe_servings"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextTitleStyle"
            android:padding="@dimen/default_item_padding"
            tools:text="@string/recipe_name_placeholder"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/recipe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/recipe_servings"
            app:layout_constraintBottom_toBottomOf="@id/view_recipe_button"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_margin="@dimen/default_large_item_padding"
            android:contentDescription="@string/recipe_image_description"
            tools:src="@drawable/recipe_dish_placeholder"/>

        <TextView
            android:id="@+id/recipe_servings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_name"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/TextSubTitleStyle"
            android:padding="@dimen/default_item_padding"
            android:drawableStart="@drawable/servings_image"
            android:drawablePadding="@dimen/default_item_padding"
            android:text="@string/num_servings"/>


        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recipe_servings"
            app:layout_constraintStart_toStartOf="@id/recipe_servings"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/TextSubTitleStyle"
            android:padding="@dimen/default_item_padding"
            android:drawableStart="@drawable/ingredients_image"
            android:drawablePadding="@dimen/default_item_padding"
            android:text="@string/num_ingredients"/>

        <TextView
            android:id="@+id/recipe_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recipe_ingredients"
            app:layout_constraintStart_toStartOf="@id/recipe_servings"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/TextSubTitleStyle"
            android:padding="@dimen/default_item_padding"
            android:drawableStart="@drawable/steps_image"
            android:drawablePadding="@dimen/default_item_padding"
            android:text="@string/num_steps"/>

        <TextView
            android:id="@+id/view_recipe_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_steps"
            app:layout_constraintStart_toStartOf="@id/recipe_steps"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextActionStyle"
            android:padding="@dimen/default_large_item_padding"
            android:text="@string/view_recipe"/>




    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>