<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/default_screen_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/default_screen_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@id/exo_play"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="center"
            android:tint="@color/play_button_tint"
            android:background="@color/controls_background_color"
            android:layout_margin="@dimen/default_screen_margin"
            style="@style/ExoMediaButton.Play"
            android:contentDescription="@string/play_button_description"/>

        <ImageButton
            android:id="@id/exo_pause"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="center"
            android:tint="@color/pause_button_tint"
            style="@style/ExoMediaButton.Pause"
            android:background="@color/controls_background_color"
            android:layout_margin="@dimen/default_screen_margin"
            android:visibility="gone"
            android:contentDescription="@string/pause_button_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_screen_margin"
        android:gravity="bottom|center_vertical"
        android:background="@color/controls_background_color"
        android:orientation="horizontal">

        <TextView
            style="@style/PlaybackControlTextStyle"
            android:id="@id/exo_position" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/time_bar_height" />

        <TextView
            style="@style/PlaybackControlTextStyle"
            android:id="@id/exo_duration" />

        <FrameLayout
            android:id="@+id/exo_fullscreen_toggle"
            android:layout_width="@dimen/fullscreen_toggle_size"
            android:layout_height="@dimen/fullscreen_toggle_size"
            android:paddingStart="@dimen/default_item_padding"
            android:paddingEnd="@dimen/default_item_padding"
            android:background="@color/controls_background_color"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/exo_fullscreen"
                style="@style/ExoMediaButton.FullScreenIcon"
                android:src="@drawable/fullscreen_expand"
                android:contentDescription="@string/expand_fullscreen_button_description"/>

            <ImageView
                android:id="@+id/exo_shrink"
                style="@style/ExoMediaButton.FullScreenIcon"
                android:src="@drawable/fullscreen_exit"
                android:visibility="gone"
                android:contentDescription="@string/shrink_fullscreen_button_description"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>